Fixed bugs
+ Fixed java 16 enable preview issue
+ Fixed a bug where all the people to join were given a role